--- a/index.html
+++ b/index.html
@@ -75,7 +75,11 @@
         <div>
             <h3 style="margin-bottom: 5px;">Diploma in Computer Engineering</h3>
             <p style="margin: 5px 0; color: #3498db;">Rajkot | 2022 - 2025</p>
-            <p>CGPA: 8.20/10</p>
+            <p>CGPA: 8.22/10</p>
+
+            <h3 style="margin-bottom: 5px;">B.Tech in Computer Engineering</h3>
+            <p style="margin: 5px 0; color: #3498db;">LDRP-Gandhinagar | 2025 - Present</p>
+            <!-- <p>CGPA: 8.22/10</p> -->
         </div>
     </section>
 
